# dev-brain

./: CHANGELOG.md  CONTRIBUTING.md  README.md  llms.txt  pyproject.toml
.github/workflows/: build-smoke.yml  coverage.yml  lock-check.yml  publish.yml  test.yml
brain_dev/: analyzer.py  server.py  smart_test_generator.py
dev_brain/: server.py
tests/: test_new_analyzers.py  test_server.py  test_smart_generator.py
