[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-brain"
version = "1.0.0"
description = "MCP server for AI-powered code analysis — test generation, security audits, coverage analysis, and refactoring suggestions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "claude",
    "code-analysis",
    "test-generation",
    "pytest",
    "security-scanning",
    "coverage-analysis",
    "refactoring",
    "ast",
    "developer-tools",
    "ai-agents",
    "llm-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop/dev-brain"
Repository = "https://github.com/mcp-tool-shop/dev-brain"
Issues = "https://github.com/mcp-tool-shop/dev-brain/issues"
Changelog = "https://github.com/mcp-tool-shop/dev-brain/blob/main/CHANGELOG.md"

[project.scripts]
dev-brain = "dev_brain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["dev_brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # These dataclasses/classes have __init__ but are not test classes
    "ignore:cannot collect test class.*SuggestedUnitCase:pytest.PytestCollectionWarning",
    "ignore:cannot collect test class.*SmartPytestFileGenerator:pytest.PytestCollectionWarning",
]
